--- a/config.toml
+++ b/config.toml
@@ -5,6 +5,7 @@ theme = 'axis'
 
 [params]
   avatar_url = "https://avatars0.githubusercontent.com/u/8762472?s=290"
+  favicon = "https://avatars0.githubusercontent.com/u/8762472?s=290"
 
 [[params.bio]]
 para = "Hi, I'm Ashish. I'm a 0.01x developer playing accross the full stack."
